Fix wrong css property for overflow: hidden.

--- a/src/components/nav.component.css
+++ b/src/components/nav.component.css
@@ -89,6 +89,7 @@
 
   :local(.location) {
     width: 100%;
+    height: 48px;
     padding: 6px;
     border-radius: 2px;
     color: rgba(255, 255, 255, 1);
